// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  NEXT
</button>
`;

exports[`renders correctly on loading state 1`] = `
<button
  className="button--disabled"
  onClick={[Function]}
>
  NEXT
</button>
`;
